<resources>
    <string name="app_name">Currency Calculator</string>
    <string name="sign_up">Sign up</string>
    <string name="currency_calculator">Currency\nCalculator</string>
    <string name="dot">.</string>
    <string name="bottom_text">Mid-market exchange rate at 13:38 UTC</string>
    <string name="convert">Convert</string>
    <string name="alert_text">Get rate alerts straight to your email inbox</string>
    <string name="past_30_days">Past 30 days</string>
    <string name="past_90_days">Past 90 days</string>
    <string name="usd">USD</string>
    <string name="enter_amount">Enter amount</string>

</resources>