<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/upperContainer"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/menu"
                android:tint="@color/sign_up_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/sign_up_color"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/currencyCalculatorTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:text="@string/currency_calculator"
            android:textColor="@color/calc_color"
            android:fontFamily="@font/righteous_regular"
            android:textSize="50sp"
            app:layout_constraintTop_toBottomOf="@id/upperContainer"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:textColor="@color/sign_up_color"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/currencyCalculatorTxt"
            app:layout_constraintStart_toEndOf="@id/currencyCalculatorTxt"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.26" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlFrom"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/guideline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFrom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_amount"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/tlFrom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_amount"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/spinnerContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/tlTo">

            <Spinner
                android:id="@+id/spFromCurrency"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_bg"
                android:spinnerMode="dropdown"
                tools:listitem="@layout/custom_spinner_items"
                android:padding="15dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/switchImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_swap"
                app:layout_constraintStart_toEndOf="@id/spFromCurrency"
                app:layout_constraintEnd_toStartOf="@id/spToCurrency"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <Spinner
                android:id="@+id/spToCurrency"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_bg"
                android:spinnerMode="dropdown"
                tools:listitem="@layout/custom_spinner_items"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/convertBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/convert"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_bg"
            app:layout_constraintTop_toBottomOf="@id/spinnerContainer"/>

        <LinearLayout
            android:id="@+id/bottomLyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/convertBtn"
            app:layout_constraintBottom_toTopOf="@id/extraScreen">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/bottomTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_text"
                android:textColor="@color/graph_color"
                android:textSize="14sp"
                android:textAlignment="center"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/extraScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/graph_bg"
            android:paddingBottom="40dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/bottomLyt"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rangeContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/past_30_days"
                    android:textSize="15sp"
                    android:textColor="@color/graph_txt_color"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/past_90_days"
                    android:textSize="15sp"
                    android:textColor="@color/days_txt_color"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/graphImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:src="@drawable/graph_img"
                app:layout_constraintTop_toBottomOf="@id/rangeContainer"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/alert_text"
                android:textColor="@color/graph_txt_color"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/graphImg"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
